[gd_scene load_steps=8 format=3 uid="uid://bmnffmaj1oepq"]

[ext_resource type="Script" path="res://Player/Weapons/mop.gd" id="1_cdm4l"]
[ext_resource type="Texture2D" uid="uid://b2jb6rp4cjolx" path="res://Textures/Items/Weapons/mop_main.png" id="2_o6fdw"]
[ext_resource type="AudioStream" uid="uid://da55gt3ei1p4l" path="res://Audio/SoundEffect/new/weapon-mop.mp3" id="3_e2bct"]
[ext_resource type="AudioStream" uid="uid://bllnc630dss05" path="res://Audio/SoundEffect/new/enemy puddle.mp3" id="4_1qf8g"]

[sub_resource type="Animation" id="Animation_3ybfu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MopSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5tjob"]
resource_name = "mop"
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MopSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pfbr"]
_data = {
"RESET": SubResource("Animation_3ybfu"),
"mop": SubResource("Animation_5tjob")
}

[node name="Mop" type="Node2D" groups=["attack"]]
script = ExtResource("1_cdm4l")

[node name="MopSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-28, 15)
scale = Vector2(-0.065, 0.065)
texture = ExtResource("2_o6fdw")
hframes = 2

[node name="PuddlePoint" type="Marker2D" parent="MopSprite"]
unique_name_in_owner = true
position = Vector2(-8, 213.6)
scale = Vector2(4, 4)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="snd_puddle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e2bct")
volume_db = -10.0
pitch_scale = 5.0

[node name="snd_collide" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1qf8g")
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2pfbr")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
